solve slider's image stretching issue

--- a/src/styles/components/_hero-slider.scss
+++ b/src/styles/components/_hero-slider.scss
@@ -119,6 +119,7 @@
 
             img {
                 height: 70vh;
+                object-fit: contain;
                 position: absolute;
                 bottom: 0;
                 right: 0;
